force-app/main/default/objects/cf123__Field_Response__c/cf123__Field_Response__c.object-meta.xml
<CustomObject>
    <label>Field Response</label>
    <nameField>
        <displayFormat>FR-{0000000000}</displayFormat>
        <label>Field Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>