force-app/main/default/objects/cf123__Field_Response__c/fields/cf123__Field__c.field-meta.xml
<CustomField>
    <fullName>cf123__Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Field</label>
    <referenceTo>cf123__Field__c</referenceTo>
    <relationshipLabel>Field Responses</relationshipLabel>
    <relationshipName>Field_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>