force-app/main/default/objects/cf123__Field_Response__c/fields/cf123__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>cf123__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>