force-app/main/default/objects/cf123__Field_Response__c/fields/cf123__Question__c.field-meta.xml
<CustomField>
    <fullName>cf123__Question__c</fullName>
    <formula>cf123__Field__r.cf123__Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question</label>
    <type>Text</type>
</CustomField>