force-app/main/default/objects/cf123__Field_Response__c/fields/cf123__Submission__c.field-meta.xml
<CustomField>
    <fullName>cf123__Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>cf123__Submission__c</referenceTo>
    <relationshipLabel>Fields Responses</relationshipLabel>
    <relationshipName>Fields_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>