force-app/main/default/objects/cf123__Field_Response__c/fields/cf123__Value__c.field-meta.xml
<CustomField>
    <fullName>cf123__Value__c</fullName>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>